package org.example.app.models;

public enum ElementType {
    FIRE,
    WATER,
    NORMAL
}
