package org.example.app.models;

public class Stack {
}
